# duecredit

./: .autorc  .codespellrc  .coveragerc  .github_changelog_generator  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  README.rst  REVIEW.md  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml  typing.yml
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: changeset_master.diff  deb_xfail_some_tests  fix_version_PR184.patch  series
debian/source/: options
debian/tests/: control
duecredit/: __init__.py  __main__.py  codemeta.py  collector.py  config.py  dueswitch.py  entries.py  export.py  io.py  log.py  parsers.py  stub.py  utils.py  version.py  versions.py
duecredit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
duecredit/cmdline/: __init__.py  cmd_collect.py  cmd_summary.py  cmd_test.py  common_args.py  helpers.py  main.py
duecredit/injections/: __init__.py  injector.py  mod_biosig.py  mod_dipy.py  mod_matplotlib.py  mod_mdp.py  mod_mne.py  mod_nibabel.py  mod_nipy.py  mod_nipype.py  mod_numpy.py  mod_pandas.py  mod_psychopy.py  mod_scipy.py  mod_skimage.py  mod_sklearn.py
duecredit/schema/: __init__.py  duecredit.context.jsonld  duecredit.yaml  model.py
duecredit/tests/: stub.py  test__main__.py  test_api.py  test_cmdline.py  test_codemeta.py  test_collector.py  test_dueswitch.py  test_entries.py  test_export.py  test_import_doi  test_injections.py  test_io.py  test_utils.py  test_versions.py  utils.py
duecredit/tests/envs/nolxml/: lxml.py
duecredit/tests/envs/stubbed/: README.txt  due.py  script.py
duecredit/tests/mod/: __init__.py  imported.py  submod.py
examples/: example_scipy.py
pubtrace/: __init__.py
